--- a/history
+++ b/history
@@ -1,1 +1,3 @@
-saboor 10001 1300 4 1300 4 Fruit_Chat*300-Gajar_Hawa*400-Butter_Chicken*450-Aloo_Paratha*150- 10001 Tue_Jan_30_03:23:02_2024 
+eqw 10003 1260 4 6274 28 Butter_Chicken*450-Tandoori_Roti*30-Biryani*550-Halwa*230- 10003 Tue_Jan_30_03:28:27_2024 
+Bilal 10001 2234 16 6274 28 Butter_Chicken*450-Biryani*550-Chicken_Curry*400-Chocolate_Shake*230-Orange_Juice*230-Fruit_Chat*300-Shawarma*320-Spaghetti_Bolognese*300-Spaghetti_Bolognese*300-Margherita_Pizza*800-Tikka_Boti*400-Lassi*120-Coca_Cola*110-Oreo_Shake*230-Apple_Juice*230-chips*44- 10003 Tue_Jan_30_03:25:59_2024 
+Saboor 10002 2780 8 6274 28 Butter_Chicken*450-Biryani*550-Chicken_Curry*400-Chocolate_Shake*230-Orange_Juice*230-Fruit_Chat*300-Shawarma*320-Spaghetti_Bolognese*300-Spaghetti_Bolognese*300-Margherita_Pizza*800-Tikka_Boti*400-Lassi*120-Coca_Cola*110-Oreo_Shake*230-Apple_Juice*230-chips*44- 10003 Tue_Jan_30_03:27:23_2024 
